@@ -1,3 +1,9 @@
+2011-08-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* pandoradb.oracle.sql: Added columns 'module_action_threshold' and 
+	'last_execution' on 'talert_template_module_actions' table.
+	* include/functions_agents.php: Correct bad sintax query.
+
 2011-08-17 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* images/networkmap/so_vmware.png: Added icon of VMware for networkamps
